Task-1 is Classwork Task Task-2 and Task-3 are Assignment Tasks

--- a/Assignment_No_02.ipynb
+++ b/Assignment_No_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment No:02.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLjKcsZzfBvAphRwXbohHj",
+      "authorship_tag": "ABX9TyOdmjTCTnO6Idhe8/7ngJY3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,8 @@
         "outputId": "56599878-d0e6-4684-e601-d76740a87ecc"
       },
       "source": [
-        "# Percentage Program\n",
+        "#Task-1\n",
+        "#Percentage Program\n",
         "x=int(input('Please Enter the Marks='))\n",
         "if x >= 80:\n",
         "  print('A')\n",
@@ -52,7 +53,7 @@
         "else:\n",
         "  print('F')  "
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,6 +75,7 @@
         "outputId": "a7a6571c-8368-4daf-9079-e4be8a4d2c72"
       },
       "source": [
+        "#Task-2 \n",
         "#Take input of age of 3 people and find oldest and youngest among them\n",
         "age1=int(input(\"Enter the age of 1st Person=\"))\n",
         "age2=int(input(\"Enter the age of 2nd Person=\"))\n",
@@ -92,7 +94,7 @@
         "else:\n",
         "  print('3rd Person is Oldest \\n1st Person is Youngest')\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +119,8 @@
         "outputId": "3f2b88c5-73be-49c9-e259-5a895091695c"
       },
       "source": [
-        "# Calculator Program\n",
+        "#Task-3\n",
+        "#Calculator Program\n",
         "print(\"What do you want to do with this calculator ??? \\nSelect an option from the following:\\nIf you want to add select 1\\nIf you want to subtract select 2\\nIf you want to Multiply select 3\\nIf you want to Divide select 4\\nIf you want to take reminder select 5\")\n",
         "x=int(input('Enter integer from 1 to 5 ='))\n",
         "if x==1 or x==2 or x==3 or x==4 or x==5:\n",
@@ -136,7 +139,7 @@
         "elif x==5:\n",
         "  print('Reminder of', a , 'by', b , 'is =', a%b )"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
